Add patch warning to top of homepage

--- a/empty-lows.html
+++ b/empty-lows.html
@@ -12,7 +12,7 @@
 		<p>This page is nothing but empty low setups. There are two broad categories: "fake" empty low setups, and "real" empty low setups. Real setups beat mash. Fake setups lose to mash. There's a tradeoff here: the more fake a setup is, the trickier the low. The best setups have ambiguous frame data where the opponent isn't sure whether or not it's safe to mash.</p>
 		<p>The fakeness of a setup is determined by its frame advantage on landing. I list the "best case" frame advantage next to the title of each setup. Anything +3 or more is completely real and beats every mash option. +2 or less loses to wakeup throw.</p>
 		<p>Most of the corner safejumps on the other page have a corresponding empty low setup. Some of them have pretty obvious tells, but there are so many different combos that even a very aware opponent will struggle to remember which is which in the heat of a match.</p>
-		<p>Note that there is no such thing as a 50/50 off an empty jump low. There is no mix. The opponent can always just block. They're inherently fake, but the mental pressure they apply is very real. Mix in an empty low occasionally to keep your opponent on their toes. Even if it's blocked you're still at advantage.</p>
+		<p>Note that there is no such thing as a 50/50 off an empty jump low. There is no mix. The opponent can always just block. They can help condition an opponent to press in bad places, or block in places they would normally press.</p>
 		
 		<h2>Metered Empty Low (+7)</h2>
 		<code>(starter) > 214H > 2M > 236H > 5H > 623H > 22U (> 5U > 2L)</code><br class="combo"/>
