--- a/matchup-notes.html
+++ b/matchup-notes.html
@@ -271,7 +271,7 @@
 			<h2>Vaseraga</h2>
 			<img src="https://grimnir-combos.github.io/charicons/vaseraga.jpg"/>
 		</div>
-		<p>Vaseraga has a self-buff move that gives the next several uses of one of his "big" moves armor. Vas players really really want this armor because he sucks without it. Can react to him setting up armor in neutral with 214U for a full punish. If he is armored and enters stance/charge from fullscreen you can knock him out with H or U fireball. Your goal is to stop him from setting up armor, or, once he's set up, to hit him out with U fireball and take advantage of the knockdown. If you let him set up armor and do as he pleases you will lose.</p>
+		<p>Vaseraga has a self-buff move that gives the next several uses of one of his "big" moves armor. Vas players really really want this armor because he sucks without it. Can react to him setting up armor in neutral with 214U. If he is armored and enters stance/charge from fullscreen you can knock him out with H or U fireball. Your goal is to stop him from setting up armor, or, once he's set up, to hit him out with U fireball and take advantage of the knockdown. If you let him set up armor and do as he pleases you will lose.</p>
 		<p>He can bait BC with Armor and full punish you for it, so be careful pressing BC while he has has armor charge.</p>
 		<p>He has a weird advancing stance. It has five followups.</p>
 		<p>- A very (very) long-ranged low. Hits you even when you think you're outspacing it.</p>
@@ -346,7 +346,7 @@
 			<img src="https://grimnir-combos.github.io/charicons/cagliostro.jpg"/>
 		</div>
 		<p>Be ready to react to teleport in neutral and on your offense. If she's in the air, keep your 2H ready. If she's on the ground be ready to 5L.</p>
-		<p>If she whiffs spear fullscreen you can full punish with 214U on reaction. Cags autopilot this a lot for some reason.</p>
+		<p>If she whiffs spear fullscreen you can punish with 214U on reaction. Cags autopilot this a lot for some reason.</p>
 		<p>On our defense, she'll often either press rock (this is plus) or M spear (this is even). Dealing with looping rock pressure on defense is very hard because you cannot mash or spotdodge it on reaction. You can spotdodge on prediction, then try and mash on the 66L pressure reset; or you can U tornado on prediction and lose to spear followup instead. If you have a seal nearby you can jump the rock on reaction to escape instead.</p>
 		<p>M spear RPS: M spear pushes you toward her and the framedata is even. If you're close enough for f.L, there is basically no RPS - press f.L and you'll at worst clash with anything she does except reversal. If you're out of range of f.L, she can delay her button to whiffpunish f.L. In this case you either need to press something slower (which loses to f.L) or delay a button (which beats f.L but can lose to something slower).</p>
 		<p>She might also try to set up EX traps in her blockstring. You can react to the flash with sweep. Even if you miss the punish, you'll destroy the traps, and she's often far enough that she can't punish on block.</p>
@@ -462,7 +462,7 @@
 		<p>- Up kick. Doesn't give him anything, but it's safe.</p>
 		<p>- Claw slam. Frametraps and wallbounces, but it's punishable on block so you'll mostly only see it in combos.</p>
 		<p>- Overhead kick. Does not need to be blocked high despite the visual. This one is plus; you're expected to mash him out of it. There's a fuzzy mash timing that beats this but doesn't lose to claw slam. Worth learning.</p>
-		<p>- Backdash. Not safe, but not punishable on reaction either; if you want to hard call it out, you can punish with either 66L or 214U.</p>
+		<p>- Backdash. Not safe, but not punishable on reaction either; if you want to hard call it out, you can punish with 66L.</p>
 		<p>- He can also just not do a followup and stop early. He is punishable, but the threat of a followup can scare you out of actually hitting the punish.</p>
 		<p>You'll note that there's no real mix here. Fuzzy mashing 5L will at worst leave you safe, though if he backdashes you won't be favored either.</p>
 		<p>The most annoying part of the matchup is his EX fireball. It's fast and works as a decent throwbait. On defense/in blockstrings, you can roll it on prediction for a full punish. But the projectile is very slow and has a very awkward angle, so it's difficult to deal with in neutral. Generally, expect to give up screenspace to this move a lot.</p>
@@ -489,7 +489,6 @@
 		<p>She can also just randomly throw it out in neutral or in blockstrings. Always be ready.</p>
 		<p>If you get command grabbed, she can jump after. When she lands from this jump, she is plus! It is a plus empty jump. Do not fuzzy mash on the landing. She can also do her weird install double jump to try to threaten high, but this is reactable with 2H.</p>
 		<p>On defense, she has a charging spear slam sort of thing that gives her access to infinite pressure resets. It is somewhat slow and very vulnerable to 5L mash, but if you aren't ready for it she can run her turn for a very long time off this. You'll also see Vira players try to press it in neutral or off very far pokes sometimes as a way to get in for "free." In install, Vira gets a full combo on counterhit, so don't screw up the mash.</p>
-		<p>In general, if you want to mash out of her pressure, mash 5L because she gets a discounted install off crouching confirm.</p>
 		<p>Antiairing Vira once she enters install can be difficult because she gains the ability to airstall and mix up her air movement. Some things to note: once she enters our 2H range, she can no longer bait the 2H and also punish. Additionally, once she performs the airdash she is committed! You can absolutely 2H the airdash.</p>
 		<p>Dealing with luminiera setplay: you'll see Vira set this up in three main situations.</p>
 		<p>- Corner knockdown. This is strike/throw; she can bait throw with something like jump, or she can do a triple attack high/low "mixup" but you can always fuzzy guard it.</p>
@@ -504,7 +503,7 @@
 		<p>Airdash on block: Punished by 9f DP.</p>
 		<p>Throwtech RPS: Her sweep is an omnipotent throwtech button. If you initiate the throw pointblank, you can't even walk back - proximity guard kicks in and you get hit low. If you initiate it spaced you can whiffpunish with delay 2M.</p>
 		<p>Supers: Her pre-install SBA activates her install. It leads to a combo on hit, but is very punishable on block. Get used to safejabbing her on wakeup to play around it. You can spotdodge it if she catches you in a dash, but you'll miss the punish so block it if possible. It hits all around her, so she can and will attempt to use it as an antiair occasionally to blow up dash patterns. If you bait it like this, you can usually punish with U kick.</p>
-		<p>Her post-install SBA is a giant laser. It's a very good reaction super that can snipe us even as far as fullscreen. When she has 100 meter in install, always keep it in mind as a potential option. To punish, spotdodge three times as early as possible, then you can full punish from anywhere with 214U.
+		<p>Her post-install SBA is a giant laser. It's a very good reaction super that can snipe us even as far as fullscreen. When she has 100 meter in install, always keep it in mind as a potential option. To punish, spotdodge three times as early as possible.
 		<p>Her pre-install SSBA and post-install SSBA are very similar. They're respectable reaction supers that beat any form of fireball. They also both punish spotdodge, so if she catches you during a dash you need to roll behind her.
 		<br>
 		<br>
@@ -547,7 +546,7 @@
 		<p>66L: Loses to airdash.</p>
 		<p>Airdash on block: Regular. He can 5U, but it's trivial to react and block for a throw punish.</p>
 		<p>Throwtech RPS: 2M is an omnipotent throwtech button. On offense, you can walk back and whiff punish with 2M.</p>
-		<p>Supers: SSBA is a decent reaction super that reaches about halfscreen and beats all forms of fireball. SBA is terrible and loses consistently. SSBA can be spotdodged. SBA cannot; if he catches you in dash, you need to roll behind him and punish with 214U.</p>
+		<p>Supers: SSBA is a decent reaction super that reaches about halfscreen and beats all forms of fireball. SBA is terrible and loses consistently. SSBA can be spotdodged. SBA cannot; if he catches you in dash, you need to roll behind him.</p>
 		<br>
 		
 		<div class="name-and-image">
@@ -731,7 +730,7 @@
 		<p>- On safejump, she has a "high/low" where she does her airstall very low to the ground and then hits you with an aerial. This is fake! If you fuzzy mash 5L you will hit her out of it for free. Don't let 2Bs get away with being idiots for free. Fuzzy mash 5L on the safejumps.</p>
 		<p>- She also has that special where she puts the tracking robot thing on you. While this is active she cannot use any other specials. The scary part is that she gets a full combo out of throw. Beware.</p>
 		<p>The saving grace on defense is that her damage is very poor, so we get a lot of chances to guess right.</p>
-		<p>She has a parry. It looks a lot like a backdash. If you trigger it, your move is treated as a whiff, and she can either do a 5f followup or cancel into a regular button. Off medium-speed buttons such as f.M, she only gets the 5f punish, which doesn't hurt that much. Off f.H she gets a full combo so beware. She can't punish lights, or 2M. The parry has a decently long recovery, but the visual tell is weird and she moves backward so it can be difficult to punish. If you react in time you can always punish with 214U.</p>
+		<p>She has a parry. It looks a lot like a backdash. If you trigger it, your move is treated as a whiff, and she can either do a 5f followup or cancel into a regular button. Off medium-speed buttons such as f.M, she only gets the 5f punish, which doesn't hurt that much. Off f.H she gets a full combo so beware. She can't punish lights, or 2M. The parry has a decently long recovery, but the visual tell is weird and she moves backward so it can be difficult to punish.</p>
 		<p>2B's U skills aren't super notable. The big one she has is the drone that drops balls on you that win neutral instantly on block. If she does this in neutral, you can react with U kick for a full punish, though this is risky if she does her U laser instead. If you want to be safe you can roll on reaction instead. Don't spotdodge!</p>
 		<p>66L: She doesn't really have a 66L. Her 5L and 5M will both lose to airdash.</p>
 		<p>Airdash on block: j.L wins against everything except U DP.</p>
@@ -793,7 +792,7 @@
 		<p>The main problem in the matchup is mouseball. It is very active, can snipe us out of airdash, and can loop plus frames in the corner. Instant roll will beat it at pretty much all spacings, but if you try to react you will lose.</p>
 		<p>66L: Goes under airdash.</p>
 		<p>Airdash on block: j.L wins against everything except U DP.</p>
-		<p>Throwtech RPS: f.M is an omnipotent throwtech button. Can only walk back and whiff punish if you initiate the throw spaced - otherwise, you have to hold it.</p>
+		<p>Throwtech RPS: Because of a strange hitbox interaction, her f.M crushes 2M but loses to f.L.</p>
 		<p>Supers: Both of her reaction supers are excellent. SBA in particular will pretty much always give cinematic. Be careful what you press when she has the bar. Both can be spotdodged.</p>
 		<br>
 		
@@ -809,7 +808,7 @@
 		<p>66L: Loses to airdash.</p>
 		<p>Airdash on block: Punished by 9f DP.</p>
 		<p>Throwtech RPS: 2M is an omnipotent throwtech button. If you initiate the throw, you can walk back and whiff punish.</p>
-		<p>Supers: SBA is a decent reaction super that beats all forms of tornado. SSBA is a matchup-defining reaction super that hits fullscreen on frame 15. Careful sending tornados or moving in the air when he has it. Both can be spotdodged. SSBA is punishable with 214U on dodge.</p>
+		<p>Supers: SBA is a decent reaction super that beats all forms of tornado. SSBA is a matchup-defining reaction super that hits fullscreen on frame 15. Careful sending tornados or moving in the air when he has it. Both can be spotdodged. Fullscreen SSBA is punishable with 214U on dodge.</p>
 		<br>
 		
 		<div class="name-and-image">
